[gd_scene load_steps=25 format=3 uid="uid://bxioim6taltal"]

[ext_resource type="Script" path="res://player.gd" id="1_up5pe"]
[ext_resource type="Texture2D" uid="uid://b02i2wthqq4l4" path="res://animations/Irabel_attack_modif-Sheet.png" id="2_svoo7"]
[ext_resource type="Texture2D" uid="uid://dqepyeefbic88" path="res://animations/Irabel_attackv2-Sheet.png" id="3_4pis4"]
[ext_resource type="Texture2D" uid="uid://3aglhtdu6o37" path="res://animations/Irabel_sidebounce_2-Sheet.png" id="3_mo3oy"]
[ext_resource type="Texture2D" uid="uid://detat1ygusfj8" path="res://animations/Irabel_run-Sheet.png" id="4_abk6m"]
[ext_resource type="Texture2D" uid="uid://bhw3j10xdbb6n" path="res://animations/Irabel_jump-Sheet.png" id="6_6pi0e"]
[ext_resource type="AudioStream" uid="uid://36gibywbi1t1" path="res://assetts/audio/hitHurt.wav" id="7_b6x2f"]
[ext_resource type="AudioStream" uid="uid://dmon1a5jdyq6m" path="res://assetts/audio/jump.wav" id="8_m3nr8"]
[ext_resource type="AudioStream" uid="uid://b2v0vsdsow8ko" path="res://assetts/audio/walk.wav" id="8_ywbg5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghsao"]
size = Vector2(50.9387, 46.2609)

[sub_resource type="Curve" id="Curve_3v247"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_w4oa7"]
min_value = -500.0
max_value = 500.0
_data = [Vector2(0.0727969, 76.3116), 0.0, 0.0, 0, 0, Vector2(0.187739, 148.649), 0.0, 0.0, 0, 0, Vector2(0.659004, 200.318), 0.0, 0.0, 0, 0, Vector2(0.984674, -461.049), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8v4ok"]
size = Vector2(16.7444, 47.4087)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_eyens"]
random_pitch = 1.17
random_volume_offset_db = 0.28
streams_count = 1
stream_0/stream = ExtResource("7_b6x2f")

[sub_resource type="Animation" id="Animation_iu72p"]
resource_name = "Irabel_basicattack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Irabel_Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.233333, 0.333333, 0.433333, 0.533333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Irabel_Sprite2D/Irabelattack_Area2D/Irabelattack_CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Irabel_Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_4pis4")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Irabel_Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Irabel_AttackSounds:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Irabel_AttackSounds:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AudioStreamRandomizer_eyens")]
}

[sub_resource type="Animation" id="Animation_8ite4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Irabel_Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Irabel_Sprite2D/Irabelattack_Area2D/Irabelattack_CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Irabel_Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_svoo7")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Irabel_Sprite2D:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Irabel_Sprite2D:skew")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Irabel_Sprite2D/JumpParticles:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Irabel_AttackSounds:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Irabel_AttackSounds:stream")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("AudioStreamRandomizer_eyens")]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Irabel_JumpSound:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Irabel_Walksounds:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_r3yek"]
resource_name = "animatedspirte_bounce"

[sub_resource type="Animation" id="Animation_i4kgs"]
resource_name = "attack_test"
loop_mode = 1

[sub_resource type="Animation" id="Animation_bx3up"]
resource_name = "irabel_idle"
length = 0.333344
loop_mode = 2
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Irabel_Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Irabel_Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_mo3oy")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Irabel_Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_n3tkn"]
resource_name = "irabel_jump"
length = 0.7
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Irabel_Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_6pi0e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Irabel_Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Irabel_Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0404654, 0.189604, 0.258114, 0.358175),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Irabel_Sprite2D/JumpParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(-0.00468221, 0.040189, 0.0554919, 0.361792),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Irabel_JumpSound:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.202976),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jmyvx"]
resource_name = "irabel_run"
length = 1.00002
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Irabel_Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_abk6m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Irabel_Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.108138, 0.24022, 0.359, 0.493742, 0.607201, 0.703909, 0.788622, 0.887314),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 2, 3, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Irabel_Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.812252),
"update": 1,
"values": [6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Irabel_Sprite2D:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.25, 0.53, 1),
"transitions": PackedFloat32Array(1, 1, 2.14355, 1, 0.482968),
"update": 0,
"values": [0.0, 0.0, -0.015708, 0.0191986, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Irabel_Walksounds:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.250469, 0.5, 0.769299),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yemg3"]
_data = {
"Irabel_basicattack": SubResource("Animation_iu72p"),
"RESET": SubResource("Animation_8ite4"),
"animatedspirte_bounce": SubResource("Animation_r3yek"),
"attack_test": SubResource("Animation_i4kgs"),
"irabel_idle": SubResource("Animation_bx3up"),
"irabel_jump": SubResource("Animation_n3tkn"),
"irabel_run": SubResource("Animation_jmyvx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0w7n"]
size = Vector2(19.3153, 60.3338)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_hytxv"]
random_pitch = 1.48
random_volume_offset_db = 0.83
streams_count = 1
stream_0/stream = ExtResource("8_m3nr8")

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(1, -35)
collision_mask = 10
slide_on_ceiling = false
floor_stop_on_slope = false
platform_floor_layers = 4294967048
script = ExtResource("1_up5pe")

[node name="Irabel_Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.53125, 1.72917)
texture = ExtResource("2_svoo7")
offset = Vector2(0, -0.578312)
hframes = 8
region_rect = Rect2(0, 0, 896, 48)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Irabelattack_Area2D" type="Area2D" parent="Irabel_Sprite2D" groups=["hurtbox"]]
collision_layer = 4
collision_mask = 2

[node name="Irabelattack_CollisionShape2D" type="CollisionShape2D" parent="Irabel_Sprite2D/Irabelattack_Area2D"]
position = Vector2(3.26531, 1.34458)
scale = Vector2(0.988967, 0.808196)
shape = SubResource("RectangleShape2D_ghsao")
disabled = true
debug_color = Color(0.904642, 0.245813, 0.467424, 0.42)

[node name="JumpParticles" type="CPUParticles2D" parent="Irabel_Sprite2D"]
position = Vector2(4.57143, 5.20481)
scale = Vector2(0.653061, 0.578312)
amount = 2
lifetime = 0.5
local_coords = true
direction = Vector2(1, 1)
spread = 50.0
gravity = Vector2(0, 900)
initial_velocity_max = 2.0
angular_velocity_curve = SubResource("Curve_3v247")
orbit_velocity_min = 1.0
orbit_velocity_max = 3.0
orbit_velocity_curve = SubResource("Curve_w4oa7")
angle_min = 390.9
angle_max = 390.9
scale_amount_max = 3.0
color = Color(0.458824, 1, 0.360784, 1)
hue_variation_min = 0.09
hue_variation_max = 0.28

[node name="Irabel_CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(5, 5)
scale = Vector2(1.22429, 0.95974)
shape = SubResource("RectangleShape2D_8v4ok")
metadata/_edit_group_ = true

[node name="Irabel_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yemg3")
}

[node name="IrabelArea" type="Area2D" parent="." groups=["player"]]
position = Vector2(-65, -6)
rotation = -3.14159
scale = Vector2(1.34069, -0.717768)
collision_mask = 2

[node name="Irabel_Hurtbox" type="CollisionShape2D" parent="IrabelArea"]
position = Vector2(-53.7037, 19.5049)
shape = SubResource("RectangleShape2D_q0w7n")
debug_color = Color(0.799352, 0.326751, 0.681803, 0.42)

[node name="Irabel_Walksounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ywbg5")
volume_db = -6.605
pitch_scale = 0.62

[node name="Irabel_AttackSounds" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_eyens")
volume_db = -13.516
pitch_scale = 0.95
attenuation = 2.63902
max_polyphony = 2
bus = &"Impacts"

[node name="Irabel_JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_hytxv")
volume_db = -5.575
pitch_scale = 0.57
attenuation = 2.63902
bus = &"Movement"
